--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -20,6 +20,7 @@ include::{include_path}/plugin_header.asciidoc[]
 
 ==== Description
 
+Adds arbitrary fields to an event
 
 
 [id="plugins-{type}s-{plugin}-options"]
