[Docs] Resolve review comments

--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -20,8 +20,7 @@ include::{include_path}/plugin_header.asciidoc[]
 
 ==== Description
 
-Adds arbitrary fields to an event
-
+Periodically group all events under a certain list of tags into a single event.
 
 [id="plugins-{type}s-{plugin}-options"]
 ==== Metaevent Filter Configuration Options
